# 2026-ikt218-osdev

./: .asm-lsp.toml  .gitignore  Doxyfile  Makefile  README.md  compile_commands.json  impro.md  run.sh
src/: kernel.c
src/06_OSDev_06/: CMakeLists.txt  limine.cfg  run.sh  toolchain-i686.cmake
src/06_OSDev_06/include/: gdt.h  idt.h  io.h  irq.h  isr.h  keyboard.h  memory.h  pit.h  snake.h  terminal.h
src/06_OSDev_06/include/libc/: stdio.h  system.h
src/06_OSDev_06/include/song/: song.h
src/06_OSDev_06/src/: gdt.c  idt.c  irq.c  isr.c  kernel.c  keyboard.c  memory.c  pit.c  snake.c  song_player.c  stdio.c  terminal.c
src/06_OSDev_06/src/arch/i386/: gdt_flush.asm  idt_flush.asm  interrupt_stubs.asm
src/10_Falcons/: CMakeLists.txt  fix_assignment_4_memory_pit.sh  fix_assignment_5_music_player.sh  limine.conf
src/10_Falcons/include/: gdt.h  idt.h  io.h  irq.h  isr.h  keyboard.h  stddef.h  stdint.h
src/10_Falcons/include/kernel/: idt.h  io.h  memory.h  piano.h  pit.h  speaker.h  terminal.h
src/10_Falcons/include/song/: frequencies.h  song.h
src/10_Falcons/reports/: assignment_4_memory_and_pit.md  assignment_5_music_player.md
src/10_Falcons/src/: gdt.c  gdt_flush.asm  idt.c  idt_load.asm  irq.asm  irq.c  isr.asm  isr.c  kernel.c  keyboard.c  memory.c  multiboot2.asm  paging.c  piano.c  pit.c  song_player.c  speaker.c
src/42_Kernel42/: CMakeLists.txt  limine.cfg
src/42_Kernel42/include/boot/: multiboot2.h
src/42_Kernel42/include/drivers/audio/: PCSPK.h
src/42_Kernel42/include/drivers/video/: vga_text.h
src/42_Kernel42/include/kernel/: errno.h  input.h  memory.h  paging.h  panic.h  pmm.h  syscall.h
src/42_Kernel42/include/kernel/filesystem/: vfs.h
src/42_Kernel42/include/kernel/util/: bitops.h
src/42_Kernel42/include/libc/: assert.h  stddef.h  stdlib.h  string.h
src/42_Kernel42/include/shell/: shell.h  shell_command.h
src/42_Kernel42/include/shell/music_player/: frequencies.h
src/42_Kernel42/scripts/: gen_shell_elf.sh  start_qemu.sh
src/42_Kernel42/src/arch/i386/: linker.ld
src/42_Kernel42/src/boot/: multiboot2.asm
src/42_Kernel42/src/drivers/input/: keyboard.c  keymap.c  keymap_no.c  keymap_us.c
src/42_Kernel42/src/drivers/video/: vga_terminal.c
src/42_Kernel42/src/kernel/: main.c  memory.c  page_fault.c  paging.c  panic.c  pit.c  syscall.c  user_mode.c
src/42_Kernel42/src/libc/: stdio.c  stdlib.c
src/42_Kernel42/src/shell/: shell.c  shell_elf.c  shell_elf.elf  userspace_shell.c
src/42_Kernel42/src/shell/commands/: clear.c  echo.c  help.c  keyboard_logger.c  loadkeys.c  ls.c  mkdir.c  print_memory.c  pwd.c  test_malloc.c  test_syscalls.c  timer_test.c  vfs_test.c  write.c
src/42_Kernel42/src/shell/commands_user/: cmd_echo.c  cmd_test.c
src/gdt/: gdt.c  (+1 more)
src/group32/: CMakeLists.txt  README.md
src/group32/include/: gdt.h  idt.h  irq.h  isr.h  keyboard.h  memory.h  paging.h  pit.h  pong.h  ports.h  screen.h  song_player.h
src/group32/include/libc/: stdio.h
src/group32/include/song/: song.h
src/group32/scripts/: start_qemu.sh
src/group32/src/: gdt.c  gdt_flush.asm  idt.c  interrupts.asm  irq.c  isr.c  kernel.c  keyboard.c  memory.c  paging.c  pit.c  pong.c  ports.c  screen.c  song_player.c
src/group_42/: CMakeLists.txt
src/group_42/include/: vga_terminal.h
src/group_42/include/drivers/audio/: PCSPK.h
src/group_42/include/drivers/input/: keyboard.h  keymap.h
src/group_42/include/drivers/video/: vga_terminal.h  vga_text.h
src/group_42/include/kernel/: fcntl.h  gdt.h  idt.h  input.h  irq.h  log.h  memory.h  paging.h  panic.h  pit.h  syscall.h  unistd.h  user_mode.h  util.h
src/group_42/include/kernel/filesystem/: ramfs.h
src/group_42/include/kernel/util/: bitops.h  ring_buffer8.h
src/group_42/include/libc/: assert.h  stdint.h  stdio.h  stdlib.h  string.h
src/group_42/include/shell/: shell.h  shell_command.h
src/group_42/include/shell/commands/: clear.h  echo.h  help.h  keyboard_logger.h  music_player.h  print_memory.h  timer_test.h
src/group_42/src/: kernel.c  kernel.cpp  vga_terminal.c
src/group_42/src/drivers/audio/: PCSPK.c
src/group_42/src/drivers/input/: keyboard.c  keymap_us.c
src/group_42/src/drivers/video/: vga_terminal.c
src/group_42/src/kernel/: gdt.c  gdt_routines.asm  idt.c  irq.c  log.c  main.c  memory.c  page_fault.c  paging.c  panic.c  pit.c  pmm.c  syscall.c  user_mode.c  util.c
src/group_42/src/kernel/filesystem/: ramfs.c  vfs.c
src/group_42/src/kernel/util/: ring_buffer8.c
src/group_42/src/libc/: stdio.c  stdlib.c  string.c
src/group_42/src/shell/: shell.c  shell_command.c  userspace_shell.c
src/group_42/src/shell/commands/: cat.c  cd.c  clear.c  echo.c  help.c  keyboard_logger.c  mkdir.c  music_player.c  print_memory.c  run_userspace.c  test_malloc.c  test_syscalls.c  timer_test.c  touch.c
src/group_42/src/shell/commands_user/: cmd_halt.c  music_player.c
src/solo_alex94/: CMakeLists.txt
src/solo_alex94/include/: idt.h  irq.h  isr.h  ports.h  terminal.h
src/solo_alex94/include/kernel/: irq_rush.h  memory.h  pit.h
src/solo_alex94/include/song/: frequencies.h  song.h
src/solo_alex94/scripts/: run_assignment5_audio.sh  run_assignment5_noaudio.sh  run_assignment6_audio.ps1  run_assignment6_audio.sh  run_assignment6_host_audio_macos.sh  run_assignment6_host_audio_windows.ps1
src/solo_alex94/src/: gdt_flush.asm  idt.c  interrupts.asm  irq.c  irq_rush.c  isr.c  kernel.c  keyboard.c  pit.c  ports.c
src/solo_alex94/src/arch/i386/: linker.ld
src/solo_alex94/src/cpp/: new.cpp
src/solo_alex94/src/memory/: malloc.c  memory.c  memutils.c
src/solo_alex94/src/song/: SongPlayer.c
src/solo_fehn/: CMakeLists.txt
src/solo_fehn/include/: gdt.h  idt.h  io.h  irq.h  isr.h  keyboard.h  memory.h  paging.h  pit.h  rtc.h  shell.h  song.h  terminal.h
src/solo_fehn/include/libc/: stdio.h  string.h
src/solo_fehn/src/: kernel.c
src/solo_fehn/src/lib/: cpp_support.cpp  gdt.asm  gdt.c  idt.asm  idt.c  irq.asm  irq.c  isr.asm  isr.c  keyboard.c  memory.c  paging.c  pit.c  rtc.c  shell.c  song_player.c  songs.c  terminal.c
src/solo_fehn/src/libc/: stdio.c  string.c
(+1381 files in other folders)
